clang/test/BSC/Negative/Ownership/Owned/owned_CStyleCast/owned_CStyleCast.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

//_Owned to _Owned
void test1() {
    int* _Owned p1;
    int* _Owned p3 = (int* _Owned)p1;     //legal
    void* _Owned p4 = (void* _Owned)p1;   //legal
    float* _Owned p2 = (float* _Owned)p1;   //expected-error {{incompatible _Owned types, cannot cast 'int *_Owned' to 'float *_Owned'}}
    int _Owned a = 10;                     //expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    float _Owned b = (float _Owned)a;     //expected-error {{type of 'float' cannot be qualified by '_Owned'}} //expected-error {{incompatible _Owned types, cannot cast '_Owned int' to '_Owned float'}}
    void* _Owned p5;
    int* _Owned p6 = (int* _Owned)p5;     //legal
}

//_Owned to unOwned
void test2() {
    int* p1;
    int* _Owned p2 = (int* _Owned)p1;  //expected-error {{cannot cast between _Owned and raw pointer; use __move_to_raw or __take_from_raw for ownership transfer}}
    float* _Owned p3 = (float* _Owned)p1;  //expected-error {{cannot cast between _Owned and raw pointer; use __move_to_raw or __take_from_raw for ownership transfer}}
}

//unOwned to _Owned
void test3() {
    int* _Owned p1;
    int* p2 = (int*)p1;  //expected-error {{cannot cast between _Owned and raw pointer; use __move_to_raw or __take_from_raw for ownership transfer}}
    float* p3 = (float*)p1;  //expected-error {{cannot cast between _Owned and raw pointer; use __move_to_raw or __take_from_raw for ownership transfer}}
}

//with const & muiti-layer pointer
void test4(int** p0, _Owned int* p1, int* p3) { //expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    const int* _Owned p11 = (const int* _Owned)p1;  //expected-error {{cannot cast between _Owned and raw pointer; use __move_to_raw or __take_from_raw for ownership transfer}}
    _Owned int* const _Owned * _Owned p22 = (_Owned int* const _Owned * _Owned)p0; //expected-error {{type of 'int' cannot be qualified by '_Owned'}} //expected-error {{cannot cast between _Owned and raw pointer; use __move_to_raw or __take_from_raw for ownership transfer}}
    int* const * _Owned p33 = (int* const * _Owned)p0;  //expected-error {{cannot cast between _Owned and raw pointer; use __move_to_raw or __take_from_raw for ownership transfer}}
    void* _Owned p44 = (void* _Owned)p3;  //expected-error {{cannot cast between _Owned and raw pointer; use __move_to_raw or __take_from_raw for ownership transfer}}
    _Owned int* p55 = (_Owned int*)p3; //expected-error {{type of 'int' cannot be qualified by '_Owned'}}
}

// illegal cases
void test5(float _Owned f1, float* _Owned f2){ //expected-error {{type of 'float' cannot be qualified by '_Owned'}}
    int _Owned a1 = (int _Owned)f1;   //expected-error {{incompatible _Owned types, cannot cast '_Owned float' to '_Owned int'}} //expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    int* _Owned a2 = (int* _Owned)f2; //expected-error {{incompatible _Owned types, cannot cast 'float *_Owned' to 'int *_Owned'}}
    void* _Owned a4 = (void* _Owned)0;   //expected-error {{incompatible _Owned types, cannot cast 'int' to 'void *_Owned'}}
}

void test6(int** _Owned p) {
    const int** _Owned p1 = p;   //expected-warning {{initializing 'const int **_Owned' with an expression of type 'int **_Owned' discards qualifiers in nested pointer types}} [-Wincompatible-pointer-types-discards-qualifiers]
    const int** _Owned p2 = (const int** _Owned)p;
}


void multicast_integer_ptr_rev() {
    char *_Owned _Nullable ptr1 = (char *_Owned _Nullable) (char) nullptr;
    // expected-error@-1 {{incompatible _Owned types, cannot cast 'char' to 'char *_Owned'}}
    // expected-warning@-2 {{cast to smaller integer type 'char' from 'std::nullptr_t'}}
    unsigned char *_Owned _Nullable ptr2 = (unsigned char *_Owned _Nullable) (unsigned char) nullptr;
    // expected-error@-1 {{incompatible _Owned types, cannot cast 'unsigned char' to 'unsigned char *_Owned'}}
    // expected-warning@-2 {{cast to smaller integer type 'unsigned char' from 'std::nullptr_t'}}
    signed char *_Owned _Nullable ptr3 = (signed char *_Owned _Nullable) (signed char) nullptr;
    // expected-error@-1 {{incompatible _Owned types, cannot cast 'signed char' to 'signed char *_Owned'}}
    // expected-warning@-2 {{cast to smaller integer type 'signed char' from 'std::nullptr_t'}}
    short *_Owned _Nullable ptr4 = (short *_Owned _Nullable) (short) nullptr;
    // expected-error@-1 {{incompatible _Owned types, cannot cast 'short' to 'short *_Owned'}}
    // expected-warning@-2 {{cast to smaller integer type 'short' from 'std::nullptr_t'}}
    unsigned short *_Owned _Nullable ptr5 = (unsigned short *_Owned _Nullable) (unsigned short) nullptr;
    // expected-error@-1 {{incompatible _Owned types, cannot cast 'unsigned short' to 'unsigned short *_Owned'}}
    // expected-warning@-2 {{cast to smaller integer type 'unsigned short' from 'std::nullptr_t'}}
    int *_Owned _Nullable ptr6 = (int *_Owned _Nullable) (int) nullptr;
    // expected-error@-1 {{incompatible _Owned types, cannot cast 'int' to 'int *_Owned'}}
    // expected-warning@-2 {{cast to smaller integer type 'int' from 'std::nullptr_t'}}
    unsigned int *_Owned _Nullable ptr7 = (unsigned int *_Owned _Nullable) (unsigned int) nullptr;
    // expected-error@-1 {{incompatible _Owned types, cannot cast 'unsigned int' to 'unsigned int *_Owned'}}
    // expected-warning@-2 {{cast to smaller integer type 'unsigned int' from 'std::nullptr_t'}}
    long *_Owned _Nullable ptr8 = (long *_Owned _Nullable) (long) nullptr;
    // expected-error@-1 {{incompatible _Owned types, cannot cast 'long' to 'long *_Owned'}}
    unsigned long *_Owned _Nullable ptr9 = (unsigned long *_Owned _Nullable) (unsigned long) nullptr;
    // expected-error@-1 {{incompatible _Owned types, cannot cast 'unsigned long' to 'unsigned long *_Owned'}}
    long long *_Owned _Nullable ptr10 = (long long *_Owned _Nullable) (long long) nullptr;
    // expected-error@-1 {{incompatible _Owned types, cannot cast 'long long' to 'long long *_Owned'}}
    unsigned long long *_Owned _Nullable ptr11 = (unsigned long long *_Owned _Nullable) (unsigned long long) nullptr;
    // expected-error@-1 {{incompatible _Owned types, cannot cast 'unsigned long long' to 'unsigned long long *_Owned'}}
}